--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/alex-c/firefly#readme",
   "dependencies": {
     "config": "^1.30.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "knex": "^0.14.6",
+    "objection": "^1.1.10",
+    "pg": "^7.4.3"
   }
 }
