--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "knex": "^0.14.6",
     "objection": "^1.1.10",
+    "objection-guid": "^3.0.1",
     "pg": "^7.4.3"
   }
 }
