Added login route and authorization middleware
Untested!

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "config": "^1.30.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.14.6",
     "objection": "^1.1.10",
     "objection-guid": "^3.0.1",
