--- a/firefly-frontend/package.json
+++ b/firefly-frontend/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.15.5",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
