--- a/firefly-frontend/package.json
+++ b/firefly-frontend/package.json
@@ -19,6 +19,7 @@
     "@mdi/font": "^5.0.45",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.15.5",
     "vue-router": "^3.1.5",
